oxidehtf/tests/macro/no_fixture.stderr
error: Suites require an fixture (but can be empty)
 --> tests/macro/no_fixture.rs:2:5
  |
2 | mod suite {
  |     ^^^^^
